<resources>
    <string name="app_name">mobile</string>
    <string name="label_button_timer">计时器</string>
    <string name="label_button_countdown">倒计时</string>
    <string name="done">完成</string>
    <string name="clipboard">剪切板</string>
    <string name="label_year">年</string>
    <string name="label_month">月</string>
    <string name="label_week">周</string>
    <string name="label_day">日</string>
    <string name="label_hour">时</string>
    <string name="label_minute">分</string>
    <string name="label_second">秒</string>
    <string name="label_millisecond">毫秒</string>

    <string name="formula_year">年</string>
    <string name="formula_month">月</string>
    <string name="formula_week">周</string>
    <string name="formula_day">日</string>
    <string name="formula_hour">时</string>
    <string name="formula_minute">分</string>
    <string name="formula_second">秒</string>
    <string name="formula_millisecond">毫秒</string>
    <string name="action_copy_time_stamp">复制时间戳</string>
    <string name="action_share_time_value">复制内容</string>
    <string name="copied">已复制</string>
</resources>