<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_content">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/formulaListView"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:paddingHorizontal="16dp"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/background_content"
        android:elevation="10dp"
        android:gravity="end|center_vertical"
        android:paddingHorizontal="16dp"
        android:textSize="28dp"
        app:layout_constraintTop_toBottomOf="@id/formulaListView"
        tools:ignore="SpUsage"
        tools:text="2025-06-22 23:23:23.23" />

    <HorizontalScrollView
        android:id="@+id/optionTypeBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toBottomOf="@id/resultView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bg_calculator_option_type"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:text="@string/label_year"
                android:textColor="@color/light_bar_text"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bg_calculator_option_type"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:text="@string/label_month"
                android:textColor="@color/light_bar_text"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bg_calculator_option_type"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:text="@string/label_week"
                android:textColor="@color/light_bar_text"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bg_calculator_option_type"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:text="@string/label_day"
                android:textColor="@color/light_bar_text"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bg_calculator_option_type"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:text="@string/label_hour"
                android:textColor="@color/light_bar_text"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bg_calculator_option_type"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:text="@string/label_minute"
                android:textColor="@color/light_bar_text"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bg_calculator_option_type"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:text="@string/label_second"
                android:textColor="@color/light_bar_text"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bg_calculator_option_type"
                android:gravity="center"
                android:paddingHorizontal="24dp"
                android:text="@string/label_millisecond"
                android:textColor="@color/light_bar_text"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

        </LinearLayout>
    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/keyboardPanel"
        android:layout_width="match_parent"
        android:layout_height="0px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionTypeBar">

        <ImageView
            android:id="@+id/clearAllButton"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toTopOf="@id/number7Button"
            app:layout_constraintEnd_toStartOf="@id/backspaceButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.15" />

        <ImageView
            android:id="@+id/backspaceButton"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/plusButton"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/minusButton"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/multiplyButton"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/divideButton"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/equalButton"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/number1Button"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/number2Button"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/number3Button"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/number4Button"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/number5Button"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/number6Button"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/number7Button"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/number8Button"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/number9Button"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/number0Button"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/number00Button"
            android:layout_width="0px"
            android:layout_height="0px"
            android:src="@mipmap/ic_launcher" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>